--- a/index.html
+++ b/index.html
@@ -9,16 +9,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 </head>
 <body>
-    <header></header>
-    <main class="card">
-        <div class="text"><h2 class="happy">HAPPY </h2><h1  class="animated infinate swing 5s ">5<small>th</small></h1> <h2 class="birthday"> BirthDay,</h2> </div>
-        <h3 class="name">Alexander<img class="moon" src="img/moon-landing.svg"></h3> !
+     <div class="card">
+        <div class="header">
+            <div class="text">
+                <h2 class="happy">HAPPY</h2>
+                <h1 class="animated infinate swing 5s ">5<small>th</small></h1> 
+                <h2 class="birthday"> BirthDay!</h2>
+            </div>
+            <h3 class="name">Alexander<img class="moon" src="img/moon-landing.svg"></h3> 
+        </div>
         <img class="rocket" src="img/spring-swing-rocket.svg">
         <div class="clouds"> 
             <img class="cloud cloud__left" src="img/cloud.svg">
             <img class="cloud cloud__middle" src="img/cloud.svg">
             <img class="cloud cloud__right" src="img/cloud.svg">
         </div>
-    </main>
+    </div>
 </body>
 </html>
